<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="favBtBg"
            type="int" />

        <variable
            name="allBtBg"
            type="int" />

        <variable
            name="callback"
            type="com.demo.postbookdb.view.callback.PostClickCallback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loading_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_post"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/post_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_light"
                android:contentDescription="@string/post_list"
                android:layout_above="@id/tableRow1"
                app:layoutManager="LinearLayoutManager" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/allpostbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() ->  callback.onAllBtnClick()}"
                    android:text="@string/all"
                    android:layout_weight="1"
                    android:background="@{allBtBg}"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/favpostbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() ->  callback.onFavBtnClick()}"
                    android:text="@string/fav"
                    android:layout_weight="1"
                    android:background="@{favBtBg}"
                    android:textColor="@color/colorPrimary" />

            </TableRow>
        </RelativeLayout>

    </LinearLayout>
</layout>