<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginCallback"
            type="com.demo.postbookdb.view.callback.LoginClickCallback" />

        <variable
            name="userPost"
            type="com.demo.postbookdb.service.model.UserPost" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/postbook_bold"
            android:text="@string/app_name"
            android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />


        <EditText
            android:id="@+id/userIdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:afterTextChanged="@{(editable)->userPost.afterUserIdChanged(editable)}"
            android:ems="10"
            android:fontFamily="@font/postbook_bold"
            android:hint="@string/user_id"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.983" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/postbook_bold"
            android:onClick="@{() ->  loginCallback.onClick(userPost)}"
            android:text="@string/Login"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>