<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userpost"
            type="com.demo.postbookdb.service.model.UserPost" />

        <variable
            name="callback"
            type="com.demo.postbookdb.view.callback.PostClickCallback" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginTop="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:onClick="@{() ->  callback.onClick(userpost)}"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/post_title"
                android:fontFamily="@font/postbook_bold"
                android:text="@{userpost.title}"
                android:textColor="@color/text_header"
                android:textSize="@dimen/project_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/post_description"
                android:text="@{String.format(@string/description, userpost.body)}"
                android:textColor="@color/text_body"
                android:textSize="@dimen/project_text" />

            <Button
                android:id="@+id/favbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view) ->  callback.onFavClick(view,userpost)}"
                android:text="@string/fav"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
